--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -21,7 +21,7 @@ jobs: # A workflow run is made up of one or more jobs, which run in parallel
           cd ..
           mkdir build
           cd build
-          cmake ..
+          cmake ../CP2024
 
     - name: Build
       working-directory: build
