--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,10 +18,9 @@ jobs: # A workflow run is made up of one or more jobs, which run in parallel
 
     - name: Configure by CMake
       run: |
-          cd ..
           mkdir build
           cd build
-          cmake ../CP2024
+          cmake ..
 
     - name: Build
       working-directory: build
